--- a/views/form.ejs
+++ b/views/form.ejs
@@ -11,8 +11,8 @@
     <%- include("nav") %>
 
     <form action="/new" method="POST">
-      <label for="user">User:</label>
-      <input required id="user" name="user" type="text" />
+      <label for="username">Username:</label>
+      <input required id="username" name="username" type="text" />
       <label for="text">Text:</label>
       <input required id="name" name="text" type="text" />
       <button type="submit">Submit</button>
