--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,11 @@
     <ul class="message-list">
       <% if(messages && messages.length > 0) (messages.forEach(message => { %>
       <li>
-        <h3><%= message.user %></h3>
-        <p style="margin-top: -12px"><i><%= message.added %></i></p>
-        <a href="/<%= message.user %>">Open</a>
+        <h3><%= message.username %></h3>
+        <p style="margin-top: -12px">
+          <i><%= message.added.toLocaleDateString() %></i>
+        </p>
+        <a href="/<%= message.id %>">Open</a>
       </li>
       <% })); else {%>
       <p>There are no messages here...</p>
